feat: rename ping to ip, because it is reserved by api gw
