# swagger.yaml
@@ -70,7 +70,7 @@ paths:
             statusCode: '200'
             responseParameters:
               method.response.header.Access-Control-Allow-Origin: "'https://apidoc.{{DOMAIN_NAME}}'"
-  /ping:
+  /ip:
     options:
       consumes:
       - "application/json"
@@ -117,7 +117,7 @@ paths:
       x-amazon-apigateway-integration:
         httpMethod: GET
         type: http
-        uri: https://{{APP_NAME}}.{{DOMAIN_NAME}}/ping
+        uri: https://{{APP_NAME}}.{{DOMAIN_NAME}}/ip
         responses:
           default:
             statusCode: '200'
